Update self-hosting documentation