@@ -7,33 +7,43 @@ this bot, it can be self-hosted without any issues in one of the following ways.
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 ## Contents
 
-- [Discord Pre-Requisites](#discord-pre-requisites)
+  - [Pre-Requisites](#pre-requisites)
   - [Local (or VPS)](#local-or-vps)
   - [Docker](#docker)
   - [Heroku Button](#heroku-button)
+- [Environment Variables](#environment-variables)
+  - [Bot specific variables, **_required_**](#bot-specific-variables-_required_)
+  - [BackBlaze B2 Cloud Storage specific variables, **_required_**](#backblaze-b2-cloud-storage-specific-variables-_required_)
+  - [Rollbar variables, _optional_](#rollbar-variables-_optional_)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
-## Discord Pre-Requisites
+## Pre-Requisites
 
-- Create a [Discord Application](https://discordapp.com/developers/application). You'll need to have both the
-**Client ID** and App Bot User's **Token** available to configure the bot.
+- Create a [Discord Application](https://discordapp.com/developers/application).
+  - You'll need to have both the **Client ID** and **App Bot Token** available to configure the bot.
+- Create a [BackBlaze B2 Cloud Storage](https://www.backblaze.com/b2/cloud-storage.html) account
+  - You'll need to create a bucket, take a note of the following:
+    - Bucket ID
+    - Bucket Name
+    - Account ID
+    - Application Key
 
-### Local (or VPS)
+## Local (or VPS)
 
-- Download the [latest release](https://github.com/guacamoledragon/throw-voice/releases) of
-the bot, you're looking for `throw-voice-<version>.jar`.
+These instructions are for those who want to run the bot either on their computer or on a server, for this you'll need to
+have [install Java 9 JRE](http://www.oracle.com/technetwork/java/javase/downloads/index.html).
 
-- Install Java 9
+- Download the [latest release](https://github.com/guacamoledragon/throw-voice/releases) of the bot and extract it,
+  you're looking for `throw-voice-<version>-release.zip`.
 
-- Set the following environment variables:
-  - `PORT`: Port on which the bot will run it's HTTP server on, strictly speaking not necessary,
-  but it's convenient.
-  - `CLIENT_ID`: Your Discord App Client ID
-  - `BOT_TOKEN`: Your Discord App's App Bot User Token (what a mouthful!)
-
-- Start the bot by running:
-  - `java -jar throw-voice-<version>.jar`
+- Configure Bot
+  - Windows Users:
+    - Edit `start.bat` and enter the appropriate values for all the variables described under [environment variables](#environment-variables).
+    - Save `start.bat`, start bot by double-click'ing `start.bat`
+  - Linux Users:
+    - Drop down to a shell and set all the variables described under [environment variables](#environment-variables).
+    - Start bot by running: `java -Xmx512m --add-modules java.xml.bind -cp 'throw-voice-<version>.jar:lib\*' tech.gdragon.App`
 
 - Navigate to `http://localhost:<PORT>` to add the bot to your Guild. 
 
@@ -41,17 +51,19 @@ Done!
 
 _Note: If you're deploying on your own VPS, then you'll need a bit more setup as you may be using NGINX or Apache._
 
-### Docker
+## Docker
 
-If Docker is your jam, then you can start the bot using:
+If Docker is your jam, the easiest thing to do is to create a `.env` file with all the variables described under
+[environment variables](#environment-variables). Then:
 
-    docker run -it -e PORT=8080 -e CLIENT_ID=... -e BOT_TOKEN=... -p 8080:8080 gdragon/throw-voice
+    docker run -it --env-file .env -p <PORT>:<PORT> gdragon/throw-voice:<version>
 
-Replace `CLIENT_ID` and `BOT_TOKEN` with your correct values. The port isn't fixed, it can be anything you'd like.
+This repo also contains a [`docker-compose.yml`](../docker-compose.yml) that can be used if desired, but it's mostly used
+for my deployment purposes.
 
 See the [Docker Hub](https://hub.docker.com/r/gdragon/throw-voice/) registry for more details on the container.
 
-### Heroku Button
+## Heroku Button
 
 _Currently not working, see [#17](https://github.com/guacamoledragon/throw-voice/issues/17)_
 
@@ -66,3 +78,32 @@ Dyno wakes up.
 
 Simply, visit `https://<heroku-app-name>.herokuapp.com/ping` to wake the bot before you start issuing
 commands.
+
+# Environment Variables
+
+These are the environment configuration variables used by the bot.
+
+## Bot specific variables, **_required_**
+
+- `BOT_TOKEN`: Discord Bot Token
+- `CLIENT_ID`: Discord Client ID
+- `DATA_DIR`: Directory path to store bot files
+- `PORT`: Port on which the bot will run it's HTTP server on and redirect to bot's invite URL
+
+## BackBlaze B2 Cloud Storage specific variables, **_required_**
+
+For more information on these see [https://www.backblaze.com/b2/docs/](https://www.backblaze.com/b2/docs/).
+
+- `B2_APP_KEY`: Application Key
+- `B2_ACCOUNT_ID`: Account ID
+- `B2_BASE_URL` _(optional)_: The base URL to use for B2, only useful if you're choosing a custom URL, don't set otherwise.
+- `B2_BUCKET_ID`: Bucket ID
+- `B2_BUCKET_NAME`: Bucket Name
+
+## Rollbar variables, _optional_
+
+All of these are optional, but if you want to upload your logs to Rollbar, create a
+[Rollbar account](https://rollbar.com/signup/).
+
+- `ROLLBAR_ENV`: Logging environment
+- `ROLLBAR_TOKEN`: Application Token
